# SemanticStack

./: .pyrightconfig.json  README.md  docker-compose.yml  import_chunks.py  setup.sh
api/: Dockerfile  requirements.txt
api/src/: main.py
api/src/routes/: __init__.py  assessments.py  chunks.py  code.py  functions.py  health.py  models.py  search.py  stats.py  summaries.py
frontend/: Dockerfile  index.html  indexOld.html  package.json  vite.config.js
frontend/src/: README.md  api.js  main.js  store.js  styles.css
frontend/src/api/: client.js
frontend/src/components/: Analytics.js  Code.js  Functions.js  Progress.js  Search.js  Tree.js
frontend/src/config/: constants.js
frontend/src/state/: store.js
frontend/src/ui/: Dashboard.js
frontend/src/ui/components/: AnalyticsCard.js  CodeViewer.js  FunctionTree.js  FunctionsList.js  ProgressCard.js  SearchResults.js  StacktraceSummaries.js  index.js
frontend/src/utils/: helpers.js
python-enricher/: Dockerfile  enrichment.sh  requirements.txt
python-enricher/src/: config.py  enricher.py
rust-parser/: .dockerignore  Cargo.toml  Dockerfile
rust-parser/src/: main.rs
scripts/: dev.sh  enrich.sh  full-pipeline.sh  prod.sh  rebuild-db.sh  reset.sh  setup-lm-studio.sh  status.sh  test-lm-studio.sh  watch-compact.sh  watch-status.sh
sql/: init.sql  init_v2.sql  seed.sql  seed_v2.sql
