[package]
name = "php-ast-parser"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rayon = "1.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tree-sitter = "0.20.10"
tree-sitter-php = "0.20.0"
walkdir = "2.4.0"
